--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ dist/NlpToolkit-Sampling-1.0.2.tar.gz
 dist/NlpToolkit-Sampling-1.0.1.tar.gz
 dist/NlpToolkit-Sampling-1.0.3.tar.gz
 dist/NlpToolkit-Sampling-1.0.4.tar.gz
+/dist/NlpToolkit-Sampling-1.0.5.tar.gz
