Converted to snake_case and minor modifications.

--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ dist/NlpToolkit-Sampling-1.0.3.tar.gz
 dist/NlpToolkit-Sampling-1.0.4.tar.gz
 /dist/NlpToolkit-Sampling-1.0.5.tar.gz
 /dist/NlpToolkit-Sampling-1.0.6.tar.gz
+/dist/
